# rwpas

./: .gitignore  LICENSE  README.md  TODO.md  rwpas.cabal  rwpas.save
cbits/: windowsize.c
exe/: Main.hs
fov-calculation-benchmark/: Main.hs
src/RWPAS/: AIControlledActor.hs  Actor.hs  AnsiTerminalOutput.hs  BresenhamLine.hs  CommonTypes.hs  Control.hs  Control.hs-boot  Debug.hs  Direction.hs  FieldOfView.hs  ForestArena.hs  Item.hs  Level.hs  Level.hs-boot  RNG.hs  Rectangle.hs  SafeCopyOrphanInstances.hs  Turn.hs  TwoDimensionalVector.hs  World.hs  World.hs-boot  WorldCoordinates.hs
src/RWPAS/AIControlledActor/: AIControlMonad.hs  BeastFrog.hs  ListOfAIs.hs  ListOfAIs.hs-boot  Types.hs  Types.hs-boot
src/RWPAS/Control/: BeastFrog.hs  ControlMonad.hs  ListOfAIs.hs  ListOfAIs.hs-boot  Types.hs  Types.hs-boot
src/RWPAS/Level/: Type.hs
src/RWPAS/Role/: Psychic.hs
src/RWPAS/World/: Type.hs
