name:                rwpas
version:             0.1.0.0
synopsis:            Roguelike With Portals And Stuff
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
copyright:           2015 (c) Mikko Juola
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     RWPAS.AnsiTerminalOutput
                       RWPAS.Level
  c-sources:           cbits/windowsize.c
  build-depends:       ansi-terminal >=0.6.2.1  && <1.0
                      ,base          >=4.8      && <5.0
                      ,containers    >=0.5      && <1.0
                      ,lens          >=4.6      && <5.0
                      ,linear        >=1.18.1.1 && <2.0
                      ,text          >=0.9      && <2.0
                      ,unix          >=2.7.1    && <3.0
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable             rwpas
  main-is:             Main.hs
  build-depends:       base, rwpas
  hs-source-dirs:      exe
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

