name:                rwpas
version:             0.1.0.0
synopsis:            Roguelike With Portals And Stuff
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
copyright:           2015 (c) Mikko Juola
build-type:          Simple
extra-source-files:  README.md stack.yaml
cabal-version:       >=1.10

library
  exposed-modules:     RWPAS.Actor
                       RWPAS.AnsiTerminalOutput
                       RWPAS.AIControlledActor
                       RWPAS.AIControlledActor.AIControlMonad
                       RWPAS.AIControlledActor.ListOfAIs
                       RWPAS.AIControlledActor.BeastFrog
                       RWPAS.AIControlledActor.Types
                       RWPAS.Control
                       RWPAS.Direction
                       RWPAS.Debug
                       RWPAS.FieldOfView
                       RWPAS.ForestArena
                       RWPAS.Level
                       RWPAS.Rectangle
                       RWPAS.Turn
                       RWPAS.TwoDimensionalVector
                       RWPAS.WorldCoordinates
  c-sources:           cbits/windowsize.c
  build-depends:       ansi-terminal >=0.6.2.1  && <1.0
                      ,base          >=4.8      && <5.0
                      ,bytestring    >=0.10     && <1.0
                      ,cereal        >=0.4.1.1  && <1.0
                      ,containers    >=0.5      && <1.0
                      ,lens          >=4.6      && <5.0
                      ,linear        >=1.18.1.1 && <2.0
                      ,mtl           >=2.2      && <3.0
                      ,mwc-random    >=0.13.3.2 && <1.0
                      ,primitive     >=0.6      && <1.0
                      ,safecopy      >=0.8.5    && <1.0
                      ,text          >=0.9      && <2.0
                      ,transformers  >=0.4      && <1.0
                      ,unix          >=2.7.1    && <3.0
                      ,vector        >=0.10     && <1.0
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

executable             rwpas
  main-is:             Main.hs
  build-depends:       base, rwpas
  hs-source-dirs:      exe
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark              fov-calculation
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                      ,criterion >=1.1 && <2.0
                      ,lens
                      ,linear
                      ,rwpas
                      ,transformers
  hs-source-dirs:      fov-calculation-benchmark
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010


